--- a/index.html
+++ b/index.html
@@ -4,7 +4,112 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <title>Food Network</title>
   </head>
-  <body></body>
+  <body>
+    <section class="section-1">
+      <div class="width">
+        <h1>
+          <span class="skip">Skip</span> The Diet, Just Eat Healthy With Food
+          Network
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+          laborum, aperiam odit debitis enim voluptatibus. Dolor esse pariatur
+          porro vero.
+        </p>
+        <button class="link-button">Order Food</button>
+      </div>
+      <div class="width">
+        <img src="img/pic/Group 8425.png" alt="" />
+      </div>
+    </section>
+    <section class="section-2">
+      <div class="width2">
+        <img src="img/pic/Person Image.png" alt="" />
+      </div>
+      <div class="width2">
+        <h1>About Me</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores
+          quam, officiis vero voluptate, labore veritatis quisquam hic quas,
+          officia commodi earum reiciendis ab omnis nam consequuntur dignissimos
+          in libero repellat corrupti! Cumque, maiores saepe sed doloremque
+          explicabo aut tempora incidunt iste voluptates, eaque nihil! Adipisci
+          eos ut illum minima necessitatibus a, voluptates, quibusdam quisquam,
+          voluptatibus fuga et voluptatem consequatur eaque.
+        </p>
+        <button class="link-button">Contact me</button>
+      </div>
+    </section>
+    <section class="section-3">
+      <div>
+        <h1><center>My Recipies</center></h1>
+      </div>
+      <div>
+        <p>
+          <center>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error
+            deleniti iste numquam ut expedita, obcaecati earum vero accusamus
+            exe.
+          </center>
+        </p>
+        <p>
+          <center>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dolorum
+            cupiditate magnam ratione animi vel?
+          </center>
+        </p>
+      </div>
+    </section>
+    <section class="section-4">
+      <div class="width4 box">
+        <img src="img/food/Project Cover7.png" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum earum
+          temporibus illo nostrum magnam ad sint dolores distinctio, obcaecati
+          voluptatem doloremque autem. Earum, voluptatem neque repudiandae
+          placeat nisi maxime illum.
+        </p>
+      </div>
+      <div class="width4 box">
+        <img src="img/food/Project Cover5.png" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolorum
+          et deleniti iure error iste fugit hic officia eum recusandae nemo
+          mollitia quae optio dolorem perferendis est accusantium, culpa
+          repellendus?
+        </p>
+      </div>
+      <div class="width4 box">
+        <img src="img/food/Project Cover8.png" alt="" />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto,
+          reprehenderit pariatur deleniti vitae cum ut ducimus eaque quos. Cum
+          vitae quidem explicabo aspernatur, obcaecati enim a aut sit inventore
+          aperiam.
+        </p>
+      </div>
+    </section>
+    <section class="last">
+      <h3>
+        <center>
+          <span class="food">FOOD</span> <span class="net">Network</span>
+        </center>
+      </h3>
+
+      <p>
+        <center class="eat">
+          Eat healthy to live healthy. Live healthy to live happy
+        </center>
+      </p>
+    </section>
+  </body>
 </html>
